--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 
 * filter logs in left-bottom, such as: only print critical logs; only print warning logs.
 
-
+* we need a chrome plugin... ( this is a dream )
