--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@
 * filter logs in left-bottom, such as: only print critical logs; only print warning logs.
 
 * we need a chrome plugin... ( this is a dream )
+
+* dynamic load plugin when add a new plugin
