--- a/TODO
+++ b/TODO
@@ -4,3 +4,5 @@
 * we need a chrome plugin... ( this is a dream )
 
 * dynamic load plugin when add a new plugin
+
+* need a dynamic trending graph in center of bottom
